servers/gamer-module/gamer-module-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gamer-module-deployment
  labels:
    app: gamer-module-service
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gamer-module-service
      version: v1
  template:
    metadata:
      labels:
        app: gamer-module-service
        version: v1
    spec:
      serviceAccountName: gamer-serviceaccount
      containers:
        - name: gamer-module-service
          image: 083118395813.dkr.ecr.ap-south-1.amazonaws.com/gamer-demo:latest
          ports:
            - containerPort: 3004
